tests/ui/forget-semicolon.stderr
error[E0308]: mismatched types
 --> tests/ui/forget-semicolon.rs:8:5
  |
8 |     Some(()) //~ ERROR mismatched types
  |     ^^^^^^^^- help: consider using a semicolon here: `;`
  |     |
  |     expected `()`, found enum `Option`
  |
  = note: expected unit type `()`
                  found enum `Option<()>`

error[E0308]: mismatched types
  --> tests/ui/forget-semicolon.rs:14:5
   |
14 |     Some(()) //~ ERROR mismatched types
   |     ^^^^^^^^- help: consider using a semicolon here: `;`
   |     |
   |     expected `()`, found enum `Option`
   |
   = note: expected unit type `()`
                   found enum `Option<()>`
